Find and fix problem with animation covering form at varying screen widths.

--- a/styles/profile_styles.css
+++ b/styles/profile_styles.css
@@ -115,6 +115,8 @@ section#new_goal_button {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 /* Make the button quite large and inviting. */
 section#new_goal_button > button {
@@ -122,10 +124,12 @@ section#new_goal_button > button {
 }
 
 #make_goal {
+    margin-top: 15px !important;
+    margin-bottom: 0 !important;
     margin-left: 30%;
     margin-right: 30%;
     padding: 5px;
-     overflow: hidden;
+    overflow: hidden; 
 }
 #make_goal form {
     display: grid;
@@ -192,7 +196,7 @@ section#new_goal_button > button {
     flex-direction: column;
 
     grid-template: 3rem 1fr 1fr / 1fr;
-    transform: translateY(-268px);
+    transform: translateY(-250px);
 }
 #user_goals h2 {
     grid-column: 1 / span 2;
@@ -207,7 +211,7 @@ section#new_goal_button > button {
     transform: translateY(0) !important;
 }
 @keyframes slide{
-    0% {transform: translateY(-268px);}
+    0% {transform: translateY(-250px);}
     100%{transform: translateY(0);}
 }
 
@@ -258,7 +262,7 @@ section#new_goal_button > button {
 
 #feed {
     border: 1px solid black;
-    transform: translateY(-268px);
+    transform: translateY(-250px);
 }
 /* List of feed stuff */
 ol#feed_entries {
